--- a/parachain/pallets/erc20-app/Cargo.toml
+++ b/parachain/pallets/erc20-app/Cargo.toml
@@ -28,7 +28,9 @@ snowbridge-core = { path = "../../primitives/core", default-features = false }
 snowbridge-ethereum = { path = "../../primitives/ethereum", default-features = false }
 
 [dev-dependencies]
-snowbridge-assets = { path = "../../pallets/assets" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
+pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
+pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
 snowbridge-dispatch = { path = "../../pallets/dispatch" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
 
