--- a/parachain/pallets/erc20-app/Cargo.toml
+++ b/parachain/pallets/erc20-app/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2018"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-serde = { version = "1.0.101", optional = true }
-codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+serde = { version = "1.0.130", optional = true }
+codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+
 hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
 rlp = { version = "0.5", default-features = false }
 hex-literal = { version = "0.3.1", default-features = false }
@@ -36,10 +38,12 @@ sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "po
 default = ["std"]
 std = [
     "serde",
-    "hex/std",
     "codec/std",
+    "scale-info/std",
+    "hex/std",
     "frame-support/std",
     "frame-system/std",
+    "frame-benchmarking/std",
     "sp-core/std",
     "sp-std/std",
     "sp-io/std",
