re-used pallet-xcm instead of forwarding XcmExecutor manually

--- a/parachain/primitives/xcm-support/Cargo.toml
+++ b/parachain/primitives/xcm-support/Cargo.toml
@@ -12,14 +12,13 @@ frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
+pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12", default-features = false }
 
 xcm = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12", default-features = false }
 xcm-executor = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12", default-features = false }
 xcm-builder = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12", default-features = false }
 
 snowbridge-core = { path = "../../primitives/core", default-features = false }
-eth-app = { path = "../../pallets/eth-app", package = "snowbridge-eth-app", default-features = false }
-erc20-app = { path = "../../pallets/erc20-app", package = "snowbridge-erc20-app", default-features = false }
 
 [features]
 default = ["std"]
@@ -32,5 +31,6 @@ std = [
         "xcm/std",
         "xcm-executor/std",
         "xcm-builder/std",
-        "snowbridge-core/std"
+        "snowbridge-core/std",
+        "pallet-xcm/std",
 ]
